<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.umutcansahin.todoapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.umutcansahin.todoapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_detailChartFragment"
            app:destination="@id/detailChartFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.umutcansahin.todoapp.ui.add_to_do.AddFragment"
        android:label="@string/title_save_or_update"
        tools:layout="@layout/fragment_add" >
        <argument
            android:name="isInsert"
            app:argType="boolean" />
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/detailChartFragment"
        android:name="com.umutcansahin.todoapp.ui.detail_pie_chart.DetailChartFragment"
        android:label="@string/title_chart_detail"
        tools:layout="@layout/fragment_detail_chart" >
        <argument
            android:name="type"
            app:argType="string" />
    </fragment>
</navigation>