<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add_to_do.AddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfInputNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="@dimen/space_24"
        android:layout_marginRight="@dimen/space_24"
        android:hint="@string/input_note"
        app:hintAnimationEnabled="true"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/gray_100"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/tfInputNote"
        android:layout_margin="@dimen/space_24">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radioButtonSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_school">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioButtonShopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_shopping">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioButtonBusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_business">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioButtonSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_sport">
            </RadioButton>

        </RadioGroup>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dateButton"
        android:text="@string/select_date_button"
        app:icon="@drawable/ic_baseline_edit_calendar_24"
        android:layout_width="match_parent"
        android:backgroundTint="@color/orange_100"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/space_24">
    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:text="@string/save_button"
        app:icon="@drawable/ic_baseline_add_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/blue_100"
        app:layout_constraintTop_toBottomOf="@+id/dateButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/space_24">
    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>
